--- a/install/connection.ini
+++ b/install/connection.ini
@@ -4,7 +4,7 @@ Authenticate=False
 DatabaseName=deadline10db
 DbType=MongoDB
 EnableSSL=False
-Hostname=mongodb
+Hostname=d10mongodb
 PasswordHash=
 Port=27017
 ReplicaSetName=
