--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
-version: "3.4"
-
 services:
   d10mongodb:
     image: mongo:5.0.1
     container_name: d10-mongodb
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 20000
+        hard: 40000
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
     ports:
@@ -39,7 +42,7 @@ services:
 
   d10client:
     build:
-      context: client
+      context: repository
     image: mono:latest
     container_name: d10-client
     depends_on:
@@ -58,10 +61,11 @@ services:
         target: /deadline10/
     restart: no
     command: sh /opt/setup/setup_client.sh
-#
+
   d10webservice:
     build:
       context: client
+      privileged: true
     image: mono:latest
     container_name: d10-webservice
     depends_on:
@@ -89,35 +93,35 @@ services:
     restart: always
     command: sh /opt/setup/run_webservice.sh
 
-  d10rcservice:
-    build:
-      context: client
-    image: mono:latest
-    container_name: d10-rcsservice
-    depends_on:
-      d10repo:
-        condition: service_completed_successfully
-      d10client:
-        condition: service_completed_successfully
-      d10mongodb:
-        condition: service_healthy
-    ports:
-        - target: 8081
-          published: 8081
-          protocol: tcp
-          mode: host
-    networks:
-      - net
-    volumes:
-      - type: bind
-        source: ./install
-        target: /opt/setup/
-      - type: bind
-        source: ./repository
-        target: /deadline10/
-      - './install/deadline-webservice.ini:/var/lib/Thinkbox/Deadline10/deadline.ini'
-    restart: always
-    command: sh /opt/setup/run_rcsservice.sh
+#  d10rcservice:
+#    build:
+#      context: client
+#    image: mono:latest
+#    container_name: d10-rcsservice
+#    depends_on:
+#      d10repo:
+#        condition: service_completed_successfully
+#      d10client:
+#        condition: service_completed_successfully
+#      d10mongodb:
+#        condition: service_healthy
+#    ports:
+#        - target: 8081
+#          published: 8081
+#          protocol: tcp
+#          mode: host
+#    networks:
+#      - net
+#    volumes:
+#      - type: bind
+#        source: ./install
+#        target: /opt/setup/
+#      - type: bind
+#        source: ./repository
+#        target: /deadline10/
+#      - './install/deadline-webservice.ini:/var/lib/Thinkbox/Deadline10/deadline.ini'
+#    restart: always
+#    command: sh /opt/setup/run_rcsservice.sh
 
 networks:
   net:
