--- a/install/connection.ini
+++ b/install/connection.ini
@@ -9,7 +9,7 @@ PasswordHash=
 Port=27017
 ReplicaSetName=
 SplitDB=False
-Username=
+Username=d10container
 Version=10
 StorageAccess=Database
 CACertificatePath=
