--- a/install/deadline.ini
+++ b/install/deadline.ini
@@ -11,3 +11,4 @@ LaunchSlaveAtStartup=false
 AutoUpdateOverride=
 ConnectionType=Repository
 NetworkRoot=/deadline10/repository
+Username=d10container
