--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,12 @@ services:
       context: client
     image: mono:latest
     container_name: d10-rcs
+    healthcheck:
+      test: curl -i http://0.0.0.0:8080 || exit 1
+      interval: 2s
+      retries: 20
+      start_period: 2s
+      timeout: 5s
     depends_on:
       d10repo:
         condition: service_completed_successfully
@@ -133,6 +139,12 @@ services:
       context: ./deadline-web-app-backend
       dockerfile: Dockerfile
     container_name: deadline-web-app-backend
+    healthcheck:
+      test: curl -i http://0.0.0.0:1000 || exit 1
+      interval: 2s
+      retries: 20
+      start_period: 2s
+      timeout: 5s
     ports:
       - "1000:80"
     environment:
@@ -153,6 +165,12 @@ services:
       args:
         NEXT_PUBLIC_BACKEND_URL: http://localhost:1000
     container_name: deadline-web-app-frontend
+    healthcheck:
+      test: curl -i http://0.0.0.0:2000 || exit 1
+      interval: 2s
+      retries: 20
+      start_period: 2s
+      timeout: 5s
     depends_on:
       d10webservice:
         condition: service_healthy
