--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,7 +140,7 @@ services:
       dockerfile: Dockerfile
     container_name: deadline-web-app-backend
     healthcheck:
-      test: curl -i http://0.0.0.0:1000 || exit 1
+      test: curl -i http://0.0.0.0:1000 | exit 1
       interval: 2s
       retries: 20
       start_period: 2s
@@ -163,7 +163,7 @@ services:
       context: deadline-web-app-frontend
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_BACKEND_URL: http://localhost:1000
+        NEXT_PUBLIC_BACKEND_URL: http://deadline-web-app-backend:1000
     container_name: deadline-web-app-frontend
     healthcheck:
       test: curl -i http://0.0.0.0:2000 || exit 1
